# hadamard-search

./: .gitignore  Cargo.toml  README.md  pyproject.toml
configs/baselines/: lp15-compressed3-smoke.cfg  lp33-compressed3-smoke.cfg
configs/lp333/: README.md  compressed3-shard0of16.cfg  compressed3-smoke.cfg
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/construct/: Cargo.toml
crates/construct/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: artifact.rs  lib.rs  matrix.rs  psd.rs  sds.rs  sequence.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
docs/: EXPERIMENT_INDEX.md  EXPERIMENT_LOG.md  METHODS_NOTE_OUTLINE.md  MILESTONES.md  PROJECT_STATE.md  RESEARCH_STATUS.md  STATUS.md  TODO.md  roadmap.md  runbook.md
docs/algorithms/: legendre-pair.md  sds-167.md
docs/research/: crt-fourier-notes.md  crt-multiplier-roadmap.md  deep-research-report.md
fixtures/known/hadamard-small/: order12.txt  order16.txt  order20.txt  order24.txt  order28.txt
fixtures/known/lp-eleven/: README.md
fixtures/known/lp-nine/: README.md
fixtures/known/lp-seven/: README.md
fixtures/known/lp-small/: README.md
fixtures/known/lp-thirteen/: README.md
py/: validate_matrix.py
